[package]
name = "sprocket_py"
version = "0.1.0"
edition = "2024"

[lib]
name = "sprocket_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
wdl-ast = { git = "https://github.com/stjude-rust-labs/wdl.git" }
wdl-grammar = { git = "https://github.com/stjude-rust-labs/wdl.git" }
